XP-3985 Fix resource loading issue in FF - Adjusted styling of New campaign button - Added error callback for ajax calls - Adjusted our vwo service to return response with status code corresponding to status code of VWO api query response and wrapping error message - Replaced forEach() in our script that fails in FF

--- a/src/main/resources/site/assets/css/app-vwo.css
+++ b/src/main/resources/site/assets/css/app-vwo.css
@@ -359,6 +359,7 @@ i.icon.icon-status-trashed::before {
 
 .vwo-new-campaign-btn.expanded {
     display: inline-block;
+    line-height: 38px;
 }
 
 .new-campaign-selection-list {
@@ -374,13 +375,12 @@ i.icon.icon-status-trashed::before {
 
 .vwo-new-campaign-btn em {
     float: left;
-    font-size: 32px;
+    font-size: 30px;
     margin: 0 20px;
 }
 
 .vwo-new-campaign-btn p {
     text-align: left;
-    margin-top: 9px;
 }
 
 .vwo-campaign-radio {
